--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Dairy of a Grumpy Old Dev - Ramses Vejar
 
 # Short bio or description (displayed in the header)
-description: Passionate Developer from Somewhere
+description: Passionate Developer from Somewhere/Nowhere
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
